Fix the spacing on the header

--- a/_patterns/header/header.css
+++ b/_patterns/header/header.css
@@ -40,6 +40,11 @@ header {
   text-align: center;
 }
 
+.gutter-nav{
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
 @media only screen and (min-width: 38em) {
 
     .logo-p {
@@ -48,6 +53,11 @@ header {
 
     .nav {
       text-align: right;
+    }
+
+    .gutter-nav{
+      padding-left: 2em;
+      padding-right: 2em;
     }
 
 }
